2.1.7.28.20:
    -fixed https://github.com/graphaware/neo4j-timetree/issues/13

2.1.7.28.19:
    -no changes

2.1.6.27.19:
    -no changes

2.1.6.26.19:
    -fixed issue #9 (NPE when requesting events in a range before any existing events)

2.1.6.26.18:
    -no changes

2.1.5.25.18:
    -no changes

2.1.5.24.18:
    - fixed a timezone support bug, timezones are now case-sensitive
    - fixed issue with external dependencies bundled with the .jar in Maven Central
    - consistent equality checks
    - less Spring
    - ability to remove unused time instants or delete the entire tree (thanks to Thomas Baum!)